# folderchat

./: .gitignore  README.ja.md  README.md  folderchat.sln
folderchat/: Program.cs  app.config  folderchat.csproj
folderchat/Exceptions/: VectorizationException.cs
folderchat/Forms/: LogDetailForm.Designer.cs  LogDetailForm.cs  LogDetailForm.resx  MainForm.Designer.cs  MainForm.cs  MainForm.resx  McpServerDialog.Designer.cs  McpServerDialog.cs  McpSettingsControl.Designer.cs  McpSettingsControl.cs  RagSettingsControl.Designer.cs  RagSettingsControl.cs  SettingsPanel.Designer.cs  SettingsPanel.cs
folderchat/Models/: ApiModels.cs  ChatModels.cs  ChunkData.cs  McpServerConfig.cs  SearchResult.cs
folderchat/Pages/: Chat.razor
folderchat/Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings  WindowSettings.cs
folderchat/Resources/: Strings.ja.resx  Strings.resx
folderchat/Services/: ApiServerService.cs  AppDataRoamingSettingsProvider.cs  AzureOpenAIChatService.cs  ClaudeCodeChatService.cs  DummyChatService.cs  ExeDirectorySettingsProvider.cs  GGUFChatService.cs  IChatService.cs  ILocalizationService.cs  IRagService.cs  IndexingService.cs  LocalizationService.cs  McpEnabledChatService.cs  OpenAIChatService.cs  OpenRouterChatService.cs  RagService.cs  (+3 more)
python_tools/: .gitignore  convert_to_markdown.py  converter.py  document_parser.py  embeddings.py  indexer.py  native_embedding_server.py  pyproject.toml  rag_indexer.py  requirements.txt  retriever.py  test_embedding.py
python_tools/gguf_loader/: __init__.py  cli.py  loader.py
(+28 files in other folders)
